test/good/13_0_spectest.fsf
type even = Zero | ENext(n:odd)
and odd = ONext(m:even)

