test/bad/21_7_spectest_bad.fsf
type bad7 = Bad7(n:bad7)

